# Kairnly

./: .gitignore  .vercelignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts
scripts/: copy-dmg-to-desktop.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/ui/: Button.tsx  Modal.tsx  Tooltip.tsx
src/features/editor/: BlockInsertMenu.tsx  EditorHeader.tsx  MediaBlock.ts  WorkspaceEditor.tsx  editorCommands.ts
src/features/search/: CommandPalette.tsx
src/features/settings/: SettingsDialog.tsx
src/features/sidebar/: Sidebar.tsx  pageTree.ts
src/lib/db/: client.ts  localFallback.ts
src/lib/export/: document.ts  pdf.ts
src/lib/icons/: pageIconRegistry.ts  pageIconText.ts  pageIcons.tsx
src/lib/store/: workspace.ts
src/lib/utils/: files.ts  text.ts
src/types/: index.ts
