[package]
name = "kairnly"
version = "1.0.0"
description = "Kairnly private local-first workspace"
authors = ["Kairnly"]
edition = "2021"

[lib]
name = "kairnly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4", "serde"] }
